--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -20,7 +20,7 @@
   position: relative;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  /* align-items: flex-start; */
   padding: 60px 90px 20px 90px;
 }
 .footer_intro {
@@ -72,7 +72,8 @@
 }
 .footer_address {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
+  margin-top: 20px;
   align-items: flex-start;
   flex-direction: column;
 }
