--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -206,14 +206,6 @@ select {
   z-index: 1;
 }
 
-.about-content-icon {
-  aspect-ratio: 1;
-  width: 100%;
-  height: 100%;
-  border-radius: 0% ;
-  
-}
-
 
 .about-content-grid .about-content-title {
   margin-top: 1%;
@@ -344,16 +336,18 @@ z-index: 1;
       display: flex;
        flex-wrap: wrap;
       }
-      .about-department-grid{
-        display: flex;
-         flex-wrap: wrap;  
-    }
     .about-content-grid-box{
       width: 40%;
     }
 }
 
-
+@media(max-width: 900px)
+{
+  .about-department-grid{
+    display: flex;
+    flex-wrap: wrap;  
+}
+}
 .achieve{
   font-size: 1.6rem;
 }
@@ -367,7 +361,12 @@ z-index: 1;
   }
 }
 
-
+@media(max-width: 1100px)
+{
+    .about-department-heading{
+        font-size: 1.1rem;
+    }
+}
 
 @media(max-width: 950px) and (min-width: 860px)
 {
@@ -377,9 +376,6 @@ z-index: 1;
   }
   .about-content-grid-row2 {
       width: 92%;
-  }
-  .about-department-grid{
-      width: 90%;
   }
 }
 @media(max-width: 860px) and (min-width: 779px)
@@ -391,7 +387,4 @@ z-index: 1;
   .about-content-grid-row2 {
     width: 87%;
   } 
-  .about-department-grid{
-    width: 50%;
-}
 }
