Contact-Us Bugs Fixed

--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -30,17 +30,17 @@
 .contact_topic{
     text-align: center;
 }
-.lineachi1
+.contactusline1
 {
     height: 3px;
-    width: 33%;
+    width: 37%;
     margin-top: 40px;
     background-color: white;
 }
-.lineachi2
+.contactusline2
 {
     height: 3px;
-    width: 33%;
+    width: 37%;
     margin-top: 40px;
     background-color: white;
 }
