--- a/src/Components/Department/mechanical-department.css
+++ b/src/Components/Department/mechanical-department.css
@@ -37,7 +37,7 @@ padding-left: 4rem ;
     padding-top: 10rem;
     z-index: 1;
     position: relative;
-    background-color: #565759;
+    background-color: #02A0FD;
 }
 
 
@@ -86,7 +86,7 @@ padding-left: 4rem ;
 .department-title {
     font-family: "Rowdies", cursive;
     font-size: 2.5rem;
-    color: #57b8ff;
+    color: #101321;
     padding-bottom: 2rem;
     padding-top: 40px;
     width: 700px;
