mechancial gif uploaded

--- a/src/Components/Department/electrical-department.css
+++ b/src/Components/Department/electrical-department.css
@@ -46,7 +46,7 @@
 .department-image-container {
   width: 50%;
 }
-.department-title {
+.department-electrical-title {
     font-family: "Rowdies", cursive;
     font-size: 2.5rem;
     color: #57b8ff;
