--- a/src/Components/Achievements/Achievements.css
+++ b/src/Components/Achievements/Achievements.css
@@ -227,12 +227,12 @@
     line-height: 14px;
   }
   .achievement_image {
-    width: 110px;
-    height: 110px;
+    width: 130px;
+    height: 100px;
     border-radius: 8px;
   }
   .achievement_container .achievement_content_container {
-    padding: 0.3rem 0;
+    padding: 0.1rem 1rem;
   }
   .achievements_title {
     margin: 1rem;
