--- a/src/Components/LandingSlide/LandingSlide.css
+++ b/src/Components/LandingSlide/LandingSlide.css
@@ -27,13 +27,22 @@
   }
 }
 @media (max-width: 768px) {
+
   .landing-slide {
-    padding: 0 4rem;
+    padding: 0;
+    flex-direction: column-reverse;
+    margin-bottom: 9rem;
+    margin-top: 9rem;
   }
   .draic-logo {
     height: 15vh;
   }
   .text {
-    font-size: 1.5rem;
+    font-size: 1.9rem;
+    margin: 40px 0px;
+    width: 70%;
+    /* margin-top: 20px; */
+    text-align: center;
   }
 }
+
