--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -24,7 +24,7 @@
   position: relative;
   margin-top: 0.5%;
   margin-bottom: 4%;
-  text-align: center;
+  text-align: left;
   width: 44vw;
 }
 .contact_topic {
@@ -144,7 +144,7 @@ form {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
   color: white;
-  text-align: center;
+  text-align: left;
   margin-left: 8px
 }
 .contact_info_headline {
