--- a/src/Components/Department/electrical-department.css
+++ b/src/Components/Department/electrical-department.css
@@ -66,7 +66,7 @@
     z-index: 100;
     text-align: center;
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
 }
 
 .elec-department-moto {
@@ -296,6 +296,7 @@
 
     .elec-department-image {
         padding: 0;
+        margin: 3rem 0;
     }
 
     .elec-department-moto {
