--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -174,20 +174,26 @@ img {
 }
 
 /* MEDIA QUERIES */
-@media (max-width: 800px) {
+@media (max-width: 940px) {
   .contact_fillform_div {
       width: 81vw;
+  }
+  input[type="text"], input[type="email"]{
+      width: 100%;
   }
   .contact_name_email_div {
     flex-direction: column;
     margin-bottom: 8px;
+    align-items: center;
   }
   .contact_form_details {
     width: auto;
+    justify-content: center;
     margin-top: 30px;
   }
-  .contact_form_name {
+  .contact_form_name, .contact_form_email {
     width: 72vw;
+    margin: 5px 0px;
   }
   .contact_info_subhead{
     font-weight: 800;
@@ -200,13 +206,10 @@ img {
     font-size: 0.8rem;
     letter-spacing: 3px;
   }
+
   .contact_information_div {
-    margin-left: 0;
-  }
-  .contact_information_div {
-    margin-top: 80px;
-    margin-bottom: 60px;
-    margin-left: 15px;
+      margin: 75px 0px;
+      margin-bottom: 50px;
   }
   .contact_info_headline{
       margin-bottom: 2vh;
@@ -217,18 +220,29 @@ img {
   }
   .contact_fillform {
     font-size: 14px;
+    text-align: center;
   }
   .contact_textarea {
-    width: 93%;
+    width: 100%;
+  }
+  .contact_form_textarea_div{
+    width: 90%;
+    align-items: center;
+    margin: 0px;
   }
   .contact_sendbtn {
     margin-top: 18px;
     padding: 8px;
     border-radius: 10px;
-    margin-left: 6px;
+    width: 30vw;
   }
   .contact_info_headline {
     font-size: 1.3rem;
+  }
+  form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
