--- a/src/Components/Achievements/Achievements.css
+++ b/src/Components/Achievements/Achievements.css
@@ -152,9 +152,9 @@
 .achievement_container .achievement_content_container p {
   margin: 10px;
   font-size: 15px;
-  line-height: 22px;
+  /* line-height: 22px;  */
   color: #d8e3e7;
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 .achievement_devicer {
   position: relative;
@@ -220,10 +220,11 @@
   }
   .achievement_container .achievement_content_container h2 {
     font-size: 9px;
-    line-height: 14px;
+    line-height: 10px;
+    font-weight: 0;
   }
   .achievement_container .achievement_content_container p {
-    font-size: 9px;
+    font-size: 0.5rem;
     line-height: 14px;
   }
   .achievement_image {
@@ -240,7 +241,8 @@
     font-size: 1.7rem;
   }
   .achievements_thought {
-    letter-spacing: 3px;
+    letter-spacing: 0.2rem;
+    padding-top: 10px;
     font-size: 12px;
     margin: 0.4rem;
   }
