--- a/src/Components/Home Projects/Project-home.css
+++ b/src/Components/Home Projects/Project-home.css
@@ -101,6 +101,7 @@
   text-align: center;
   margin: auto;
   flex-direction: row;
+  margin: 0 50px;
 }
 
 /* @media (max-width: 800px) {
@@ -177,7 +178,9 @@
 .home-project-card-btn span {
   transition: 0.2s;
 }
-.home-project-card-btn:hover span,
+.home-project-card-btn:hover span{
+    background-color: #17202e;
+}
 .home-project-card-btn:active span {
   margin-left: 1rem;
   background: none;
@@ -214,6 +217,7 @@
 @media (max-width: 767.98px) {
   .home-projects-container {
     flex-direction: column;
+    margin: 0 0;
   }
   .home-individual-project-container {
     margin: 10px;
@@ -230,11 +234,11 @@
   }
 }
 
-@media screen and (max-width: 412px) {
+@media screen and (max-width: 700px) {
   .home-project-moto {
     font-size: 0.8rem;
     padding-top: 10px;
-    letter-spacing: 0.4em;
+    letter-spacing: 0.2em;
   }
   .project-component-home {
     padding-bottom: 30px;
@@ -248,16 +252,16 @@
     padding: 20px;
   }
   .seperator-decoration-line1 {
-    width: 15%;
+    width: 100%;
     height: 2.8px;
   }
   .seperator-decoration-line2 {
-    width: 15%;
+    width: 100%;
     height: 2.8px;
   }
 
   .home-individual-project-container {
-    margin: 40px;
+    margin: 20px 60px;
   }
   .home-project-image {
     width: 100%;
@@ -265,6 +269,7 @@
 
   .home-project-title-our-project {
     font-size: 1.7rem;
+    white-space: nowrap;
   }
 
   .home-project-title-heading {
