--- a/src/Components/Projects/Project.css
+++ b/src/Components/Projects/Project.css
@@ -9,7 +9,7 @@
 }
 
 .project-header {
-  padding-top: 190px;
+  padding-top: 10.4rem;
   text-align: center;
   margin-bottom: 30px;
 }
@@ -62,7 +62,9 @@
   text-align: left;
   margin-left: 0;
 }
-
+.project_headline_div{
+  margin-top: 2rem;
+}
 .firstrowourproject {
   z-index: 100;
   text-align: center;
@@ -207,6 +209,7 @@
   .projects-container{
     margin: 0 50px;
   }
+
   .project-moto {
     font-size: 12px;
     letter-spacing: 0.2rem;
