--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -16,15 +16,12 @@
   --fs-500: 1.25rem;
 }
 
-
-
 input,
 button,
 textarea,
 select {
   font: inherit;
 }
-
 
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
@@ -41,20 +38,15 @@ select {
   }
 }
 
-
-
-
-
 .flow > *:where(:not(:first-child)) {
   margin-top: var(--flow-spacer, 1em);
 }
 
-.bg-primary-400 { 
-  
+.bg-primary-400 {
   background-color: #38eaf7;
 }
 .bg-secondary-400 {
-  background: #17202E
+  background: #17202e;
 }
 .bg-secondary-500 {
   background-color: #2f3847;
@@ -64,7 +56,7 @@ select {
   background: hsl(var(--clr-neutral-100));
 }
 
-.bg-black{
+.bg-black {
   background: black;
 }
 
@@ -76,27 +68,25 @@ select {
 }
 .border-primary-400 {
   border: 3px solid #38eaf7;
-  background-color: #17202E;
-  
+  background-color: #17202e;
 }
 
-
-.about-grid-span2{
-    grid-row:span 2
+.about-grid-span2 {
+  grid-row: span 2;
 }
 
-.about-body{
+.about-body {
   background-color: rgba(10, 25, 49, 0.8);
   position: relative;
   z-index: 1;
   margin-top: -10rem;
-  
+
   height: auto;
 }
 
-.aboutmain{
+.aboutmain {
   display: grid;
-  gap:2em;
+  gap: 2em;
   width: 90%;
   position: relative;
   z-index: 1;
@@ -104,52 +94,48 @@ select {
   margin: 0px auto;
 }
 
-.about-content-count-main{
+.about-content-count-main {
   margin-top: 1%;
   font-size: 35px;
   font-weight: var(--fw-400);
   line-height: 1;
   color: white;
   font-family: "Rowdies", cursive;
-
 }
-.about-seperator{
+.about-seperator {
   display: flex;
   margin: auto;
   margin-bottom: 2rem;
 }
-.about-heading{
+.about-heading {
   font-family: "Rowdies", cursive;
-    font-size: 2.5rem;
-    padding: 20px;
-    white-space: nowrap;
+  font-size: 2.5rem;
+  padding: 20px;
+  white-space: nowrap;
 }
-.about-subheading{
+.about-subheading {
   font-family: "Roboto Condensed", sans-serif;
-    font-size: 1rem;
-    padding-top: 40px;
-    color: #57b8ff;
-    letter-spacing: 0.5em;
-    margin-top: 13rem;
-    margin-bottom: 20px;
+  font-size: 1rem;
+  padding-top: 40px;
+  color: #57b8ff;
+  letter-spacing: 0.5em;
+  margin-top: 13rem;
+  margin-bottom: 20px;
 }
 .about-title-body {
   z-index: 100;
   text-align: center;
 }
 
-
-
-
-.about-title{
+.about-title {
   margin-top: 5rem;
   font-size: 3.4rem;
-  color:white;
+  color: white;
   text-align: center;
   line-height: 1.5cm;
   font-weight: var(--fw-400);
   z-index: 111;
-  }
+}
 
 .about-title-line2 {
   height: 3px;
@@ -163,15 +149,15 @@ select {
 }
 
 .about-title-line1 {
-    height: 3px;
-    width: 38%;
-    color: white;
-    z-index: 30000;
-    margin: auto;
-    background-color: azure;
-    text-align: left;
-    margin-right: 0;
-  }
+  height: 3px;
+  width: 38%;
+  color: white;
+  z-index: 30000;
+  margin: auto;
+  background-color: azure;
+  text-align: left;
+  margin-right: 0;
+}
 
 .about-content {
   width: 100%;
@@ -182,18 +168,18 @@ select {
   z-index: 1;
 }
 
-.about-content-grid-row2{
+.about-content-grid-row2 {
   display: flex;
   flex-direction: row;
   align-items: center;
   /* padding: 10px; */
 }
-.row1{
-    width: 70%;
-    height: 50%;
+.row1 {
+  width: 70%;
+  height: 50%;
 }
 
-.about-content-grid-boxes{
+.about-content-grid-boxes {
   width: 90%;
   height: 50%;
   margin-right: 1.5rem;
@@ -202,10 +188,10 @@ select {
   z-index: 1;
   margin-bottom: 15px;
 }
-.about_row2{
-    display: flex;
-    flex-direction: row;
-    /* flex-wrap: wrap; */
+.about_row2 {
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
 }
 
 .about-content-grid {
@@ -222,7 +208,6 @@ select {
   z-index: 1;
 }
 
-
 .about-content-grid .about-content-title {
   margin-top: 1%;
   font-size: 2rem;
@@ -232,17 +217,16 @@ select {
   font-family: "Rowdies", cursive;
   margin-left: 20px;
 }
-.about-content-text{
+.about-content-text {
   font-size: 25px;
   opacity: 0.5;
 }
-.about-content-count-sub{
+.about-content-count-sub {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: white;
   font-size: 1.6rem;
   opacity: 0.5;
 }
-
 
 .about-content-grid .about-content-text {
   font-size: var(--fs-300);
@@ -257,69 +241,62 @@ select {
   opacity: 0.7;
 }
 
-.about-text{
-text-align: center;
-font-size: 1.8rem;
-font-weight: var(--fw-400);
-line-height: 1;
-padding: 10px 20px 20px 20px;
-color: white;
-z-index: 1;
-
+.about-text {
+  text-align: center;
+  font-size: 1.8rem;
+  font-weight: var(--fw-400);
+  line-height: 1;
+  padding: 10px 20px 20px 20px;
+  color: white;
+  z-index: 1;
 }
 
-
-.about-department-heading{
+.about-department-heading {
   display: inline;
   line-height: 0.1;
   position: relative;
-  top:-10px;
+  top: -10px;
   padding-left: 1rem;
-  margin:10px;
+  margin: 10px;
   font-family: "Rowdies", cursive;
   font-size: 1.6rem;
   color: #38eaf7;
 }
 
-.about-department-title-body{
-  padding-left:16px;
+.about-department-title-body {
+  padding-left: 16px;
 }
-.about-department-link{
+.about-department-link {
   text-decoration: none;
 }
-.dept-title{
+.dept-title {
   margin-top: 8vh;
   padding-left: 20px;
   font-size: 3.5rem;
-  color:white;
+  color: white;
   text-align: center;
   font-weight: var(--fw-400);
 }
-.about-department-grid{
+.about-department-grid {
   display: grid;
-  gap:2em; 
+  gap: 2em;
   width: 100%;
-  grid-template-columns: 1fr 1fr 1fr ;
-    
+  grid-template-columns: 1fr 1fr 1fr;
 }
-.about-department-grid-box{
-  
+.about-department-grid-box {
   width: 100%;
   height: 100%;
   padding: 1rem;
   border-radius: 1.2rem;
   border-style: solid 4px;
   border-color: rgb(89, 233, 238);
-
 }
 
- 
-.about-department-text{
+.about-department-text {
   font-size: 1.1rem;
   margin-top: 0;
-  
 }
-.about-department-icon{
+.about-department-icon {
   margin: 0px;
   max-width: 40px;
 }
@@ -327,117 +304,106 @@ z-index: 1;
   border-color: white;
 }
 
-.about-department{
+.about-department {
   margin-bottom: 7rem;
   margin-top: -3rem;
-
 }
 
-@media(max-width: 780px)
-{
-    .about-content{
-       display: flex;
-       flex-wrap: wrap;
-    }
-    .content-grid-width{
-      width: 100%;
-      word-wrap: break-word;
-    }
-    .about-content-grid{
-      margin-top: 10px;
-    }
-    .about-content-grid-row2{
-        display: flex;
-       flex-wrap: wrap;
-      }
-    .about-content-grid-box{
-      width: 40%;
-    }
-}
-
-@media(max-width: 900px)
-{
-  .about-department-grid{
+@media (max-width: 780px) {
+  .about-content {
     display: flex;
-    flex-wrap: wrap;  
+    flex-wrap: wrap;
+  }
+  .content-grid-width {
+    width: 100%;
+    word-wrap: break-word;
+  }
+  .about-content-grid {
+    margin-top: 10px;
+  }
+  .about-content-grid-row2 {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .about-content-grid-box {
+    width: 40%;
+  }
 }
+
+@media (max-width: 900px) {
+  .about-department-grid {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
-.achieve{
+.achieve {
   font-size: 1.6rem;
 }
-@media(max-width: 600px)
-{
-  .about-content-width{
+@media (max-width: 600px) {
+  .about-content-width {
     width: 46%;
   }
-  .achieve{
+  .achieve {
     font-size: 1.25rem;
   }
 }
 
-@media(max-width: 1100px)
-{
-    .about-department-heading{
-        font-size: 1.1rem;
-    }
+@media (max-width: 1100px) {
+  .about-department-heading {
+    font-size: 1.1rem;
+  }
 }
 
-@media(max-width: 950px) and (min-width: 860px)
-{
-  .about-content
-  {
-      width: 95%;
+@media (max-width: 950px) and (min-width: 860px) {
+  .about-content {
+    width: 95%;
   }
   .about-content-grid-row2 {
-      width: 92%;
+    width: 92%;
   }
 }
-@media(max-width: 860px) and (min-width: 779px)
-{
-  .about-content
-  {
-      width: 86%;
+@media (max-width: 860px) and (min-width: 779px) {
+  .about-content {
+    width: 86%;
   }
   .about-content-grid-row2 {
     width: 87%;
-  } 
+  }
 }
 
-.about-subheading2{
+.about-subheading2 {
   margin-top: 80px;
 }
 
-@media(max-width: 400px)
-{
-  .aboutmain{
-      width: 90%;
-      padding: 3rem 0rem;
+@media (max-width: 400px) {
+  .aboutmain {
+    width: 90%;
+    padding: 3rem 0rem;
   }
-  .about-title-body{
+  .about-title-body {
     width: 76%;
   }
-  .about-content-title{
-      white-space: nowrap;
+  .about-content-title {
+    white-space: nowrap;
   }
-  .about-content{
+  .about-content {
     width: 75%;
   }
   .about-content-grid-row2 {
-      width: 75%;
+    width: 75%;
   }
   .achieve {
     font-size: 1.15rem;
   }
-  .about-department{
+  .about-department {
     width: 75%;
   }
-  .about-subheading2{
-      margin-top: 80px;
-      width: 136%;
+  .about-subheading2 {
+    margin-top: 80px;
+    width: 136%;
   }
-  .about-content-text{
-      font-family: Arial, Helvetica, sans-serif;
-      padding: 5px 2px;
+  .about-content-text {
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 5px 2px;
   }
 }
-
